--- a/sliding_puzzle.html
+++ b/sliding_puzzle.html
@@ -18,8 +18,8 @@ thumbnail links to diff pictures
 
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="sliding_puzzle_v08.css">
-<script src="sliding_puzzle_v08.js"></script>
+<link rel="stylesheet" href="sliding_puzzle.css">
+<script src="sliding_puzzle.js"></script>
 
 <body>
 
