--- a/sliding_puzzle.html
+++ b/sliding_puzzle.html
@@ -15,15 +15,20 @@ hover
 thumbnail links to diff pictures
 git-ed
  -->
- v09
+
 
 <!DOCTYPE html>
 <html>
+
+<head>
 <link rel="stylesheet" href="sliding_puzzle.css">
+<script src="http://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="sliding_puzzle.js"></script>
+<script src="sliding_puzzle_jquery.js"></script>
+
+</head>
 
 <body>
-
 <div style="
             <!-- border:1px solid black; --> 
             height:560px; 
@@ -33,48 +38,48 @@ git-ed
 
 <!-- <img id="background" src="cafewallspiral95.gifx" alt=""/>
  --> 
- 	<div class="tile position_1" onclick="move(this)"/>
+ 	<div class="tile position_1"/>
   	<img id="top_left" src="cafewallspiral95.gifx" alt=""/>
     <p class="text">1</p>
 	</div>
- 	<div class="tile position_2" onclick="move(this)"/>
+ 	<div class="tile position_2"/>
  		<img id="top_center" src="cafewallspiral95.gifx" alt="2"/>
   	<p class="text">2</p>
   </div>
- 	<div class="tile position_3" onclick="move(this)"/>
+ 	<div class="tile position_3"/>
  		<img id="top_right" src="cafewallspiral95.gifx" alt="3"/>
   	<p class="text">3</p>
   </div>
- 	<div class="tile position_4" onclick="move(this)"/>
+ 	<div class="tile position_4"/>
  		<img id="middle_left" src="cafewallspiral95.gifx" alt="4"/>
   	<p class="text">4</p>
   </div>
- 	<div class="tile position_5" onclick="move(this)"/>
+ 	<div class="tile position_5"/>
  		<img id="middle_center" src="cafewallspiral95.gifx" alt="5"/>
   	<p class="text">5</p>
   </div>
- 	<div class="tile position_6" onclick="move(this)"/>
+ 	<div class="tile position_6"/>
  		<img id="middle_right" src="cafewallspiral95.gifx" alt="6"/>
   	<p class="text">6</p>
   </div>
- 	<div class="tile position_7" onclick="move(this)"/>
+ 	<div class="tile position_7"/>
  		<img id="bottom_left" src="cafewallspiral95.gifx" alt="7"/>
   	<p class="text">7</p>
   </div>
- 	<div class="tile position_8" onclick="move(this)"/>
+ 	<div class="tile position_8"/>
  		<img id="bottom_center" src="cafewallspiral95.gifx" alt="8"/>
   	<p class="text">8</p>
   </div>
 </div>
 
-<br><button onclick="randomize(500)">Randomize Tiles</button>
+<br><button id="randomizer">Randomize Tiles</button>
 
 <div id="thumbnail_box">
-  <div class="thumbnail" src="" alt="" onclick="changeTilePicture(this)">
+  <div class="thumbnail" src="" alt="">
   <p class="thumbnail_text">123</p> 
   </div> 
-  <img src="cafewallspiral95.gif" alt="" class="thumbnail" onclick="changeTilePicture(this)"/>
-  <img src="spiral.jpg" alt="" class="thumbnail_img" onclick="changeTilePicture(this)"/>
+  <img src="cafewallspiral95.gif" alt="" class="thumbnail"/>
+  <img src="spiral.jpg" alt="" class="thumbnail"/>
 </div>
 
 </div>
@@ -87,5 +92,4 @@ Sliding Puzzle by John Poliquin (johndpoliquin@gmail.com)
 
 </body>
 </html>
-
 
