--- a/sliding_puzzle.html
+++ b/sliding_puzzle.html
@@ -14,6 +14,7 @@ arrow keys move
 hover
 thumbnail links to diff pictures
 git-ed
+jqueried
  -->
 
 
@@ -87,7 +88,7 @@ git-ed
 
 
 <div id="info">
-Sliding Puzzle by John Poliquin (johndpoliquin@gmail.com)
+Sliding Puzzle (v0.09) by John Poliquin (johndpoliquin@gmail.com)
 </div>
 
 </body>
