Implemented JQuery and Tile Sliding (working) Next, will add a randomizer with sliding tiles and a fade in victory screen. Also will combine $(document).ready statements.

--- a/sliding_puzzle.html
+++ b/sliding_puzzle.html
@@ -17,7 +17,6 @@ git-ed
 jqueried
  -->
 
-
 <!DOCTYPE html>
 <html>
 
@@ -25,7 +24,6 @@ jqueried
 <link rel="stylesheet" href="sliding_puzzle.css">
 <script src="http://code.jquery.com/jquery-1.11.3.js"></script>
 <script src="sliding_puzzle.js"></script>
-<script src="sliding_puzzle_jquery.js"></script>
 
 </head>
 
@@ -37,38 +35,38 @@ jqueried
 
 <div id="border">
 
-<!-- <img id="background" src="cafewallspiral95.gifx" alt=""/>
+<!-- <img id="background" src="" alt=""/>
  --> 
  	<div class="tile position_1"/>
-  	<img id="top_left" src="cafewallspiral95.gifx" alt=""/>
+  	<img id="top_left" src="" alt=""/>
     <p class="text">1</p>
 	</div>
  	<div class="tile position_2"/>
- 		<img id="top_center" src="cafewallspiral95.gifx" alt="2"/>
+ 		<img id="top_center" src="" alt="2"/>
   	<p class="text">2</p>
   </div>
  	<div class="tile position_3"/>
- 		<img id="top_right" src="cafewallspiral95.gifx" alt="3"/>
+ 		<img id="top_right" src="" alt="3"/>
   	<p class="text">3</p>
   </div>
  	<div class="tile position_4"/>
- 		<img id="middle_left" src="cafewallspiral95.gifx" alt="4"/>
+ 		<img id="middle_left" src="" alt="4"/>
   	<p class="text">4</p>
   </div>
  	<div class="tile position_5"/>
- 		<img id="middle_center" src="cafewallspiral95.gifx" alt="5"/>
+ 		<img id="middle_center" src="" alt="5"/>
   	<p class="text">5</p>
   </div>
  	<div class="tile position_6"/>
- 		<img id="middle_right" src="cafewallspiral95.gifx" alt="6"/>
+ 		<img id="middle_right" src="" alt="6"/>
   	<p class="text">6</p>
   </div>
  	<div class="tile position_7"/>
- 		<img id="bottom_left" src="cafewallspiral95.gifx" alt="7"/>
+ 		<img id="bottom_left" src="" alt="7"/>
   	<p class="text">7</p>
   </div>
  	<div class="tile position_8"/>
- 		<img id="bottom_center" src="cafewallspiral95.gifx" alt="8"/>
+ 		<img id="bottom_center" src="" alt="8"/>
   	<p class="text">8</p>
   </div>
 </div>
