--- a/sliding_puzzle.html
+++ b/sliding_puzzle.html
@@ -1,20 +1,19 @@
 <!-- 
 Things to implement:
-sliding tiles (jquery)
 timer
 victory screen w/ timer
 solver 
-
+Fix randomize + keystroke bug
  -->
 <!-- 
 Done:
 Two tile move
 randomizer
-arrow keys move
+wsad keys move
 hover
 thumbnail links to diff pictures
 git-ed
-jqueried
+sliding tiles (jquery)
  -->
 
 <!DOCTYPE html>
